PROD-12-18-19/force-app/main/default/objects/Permission_Type__c/Permission_Type__c.object-meta.xml
<CustomObject>
    <label>Permission Type</label>
    <nameField>
        <label>Permission Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permission Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>