PROD-12-18-19/force-app/main/default/objects/Permission_Type__c/fields/Custom_Permissions_Alert_Edit__c.field-meta.xml
<CustomField>
    <fullName>Custom_Permissions_Alert_Edit__c</fullName>
    <label>Alert Edit Permissions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>