PROD-12-18-19/force-app/main/default/objects/Permission_Type__c/fields/Default_Active__c.field-meta.xml
<CustomField>
    <fullName>Default_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Active</label>
    <type>Checkbox</type>
</CustomField>