PROD-12-18-19/force-app/main/default/objects/Permission_Type__c/fields/Default_Alert__c.field-meta.xml
<CustomField>
    <fullName>Default_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Alert</label>
    <type>Checkbox</type>
</CustomField>