PROD-12-18-19/force-app/main/default/objects/Permission_Type__c/fields/Document_Edit_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Document_Edit_Permissions__c</fullName>
    <label>Document Edit Permissions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>