PROD-12-18-19/force-app/main/default/objects/Permission_Type__c/fields/Label_Color__c.field-meta.xml
<CustomField>
    <fullName>Label_Color__c</fullName>
    <label>Label Color</label>
    <length>64</length>
    <type>Text</type>
</CustomField>