PROD-12-18-19/force-app/main/default/objects/Permission_Type__c/fields/Notification_Edit_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Notification_Edit_Permissions__c</fullName>
    <label>Notification Edit Permissions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>